# packages/db/schema.ts
@@ -61,7 +61,7 @@ export const destinations = sqliteTable(
     slug: text("slug").notNull(),
     title: text("title").notNull(),
     description: text("description").notNull(),
-    coverImage: text("cover_image").notNull(),
+    coverImage: text("cover_image"),
     createdBy: text("created_by").references(() => user.id, { onDelete: "set null", onUpdate: "cascade" }),
     updatedBy: text("updated_by").references(() => user.id, { onDelete: "set null", onUpdate: "cascade" }),
     createdAt: integer("created_at", { mode: "timestamp" }).notNull().default(currentTimestamp),
@@ -242,14 +242,12 @@ export const listings = sqliteTable(
     title: text("title").notNull(),
     shortDescription: text("short_description").notNull(),
     description: text("description").notNull(),
-    latitude: real("latitude").notNull(),
-    longitude: real("longitude").notNull(),
-    busynessRating: integer("busyness_rating").notNull(),
+    latitude: real("latitude"),
+    longitude: real("longitude"),
+    busynessRating: integer("busyness_rating"),
     googleMapsPlaceUrl: text("google_maps_place_url"),
-    coverImage: text("cover_image").notNull(),
-    categorySlug: text("category_slug")
-      .notNull()
-      .references(() => categories.slug, { onDelete: "restrict", onUpdate: "cascade" }),
+    coverImage: text("cover_image"),
+    categorySlug: text("category_slug").references(() => categories.slug, { onDelete: "restrict", onUpdate: "cascade" }),
     createdBy: text("created_by"),
     updatedBy: text("updated_by"),
     source: text("source").notNull(),
